meu primeiro commit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Meu site bonito do meu currículo feio</h1>
+        <h1>Simplesmente Nerd Drag Santos 06</h1>
         <h2>Currículo</h2>
         <ul>
             <li>
