--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <title>Meu site</title>
-</head>
-<body>
-    <nav>
-        <div class="nav-wrapper blue darken-4">
-            <a href="#" class="brand-logo center">Site</a>
-        </div>
-    </nav>
-    <div class="container">
-        <h1>Simplesmente Nerd Drag Santos 06</h1>
-        <h2>CurrÃ­culo</h2>
-        <ul>
-            <li>
-                <p>Empresa 1 - 2012-2014</p>
-                <p>ExperiÃªncia: blablabla</p>
-            </li>
-            <li>
-                <p>Empresa 2 - 2014-2016</p>
-                <p>ExperiÃªncia: blablabla</p>
-            </li>
-            <li>
-                <p>Empresa 3 - 2016-2019</p>
-                <p>ExperiÃªncia: blablabla</p>
-            </li>
-        </ul>
-    </div>
-</body>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
+    <head>
+        <title>Fontes</title>
+        <meta charset="windows-1252">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@600&display=swap" rel="stylesheet">
+        
+    <style>
+        body { font-family: 'Rokkitt', serif;
+               width: 60%}
+        h1 {color: blueviolet;
+            font-size: 42px}
+        p { font-size: 24px }
+    </style>
+        
+    </head>
+    <body>
+        <h1>Conselhos de finanças para um momento de crise</h1>
+        <p>Se você não guardou dinheiro para os momentos que virão, sinto informar, mas você se fodeu grandão.</p>
+        <p>Se você acha que está indo para o abate, pare, respire e repita: "Oi Gustavo. Legal o site!"</p>
+        <p>Se você acha que estamos vivendo tempos de peste, nunca se esqueça que Gustavo sambou na Fuvest!</p>
+        <p>Já se você não está gostando de todo esse trocadilho, calma que ainda tem "arroz soltinho, tudo muito gostoso filho!"</p>
+        <p>Se você acha que chegamos ao fundo do poço, saiba que para GTO que nunca trabalhou 600 conto é até poco.</p>
+    </body>
 </html>
