meu primeiro commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ and open the template in the editor.
     <head>
         <title>Fontes</title>
         <meta charset="windows-1252">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@600&display=swap" rel="stylesheet">
         
