meu primeiro commit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@ and open the template in the editor.
 <html>
     <head>
         <title>Fontes</title>
-        <meta charset="windows-1252">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@600&display=swap" rel="stylesheet">
@@ -22,11 +21,11 @@ and open the template in the editor.
         
     </head>
     <body>
-        <h1>Conselhos de finanças para um momento de crise</h1>
-        <p>Se você não guardou dinheiro para os momentos que virão, sinto informar, mas você se fodeu grandão.</p>
-        <p>Se você acha que está indo para o abate, pare, respire e repita: "Oi Gustavo. Legal o site!"</p>
-        <p>Se você acha que estamos vivendo tempos de peste, nunca se esqueça que Gustavo sambou na Fuvest!</p>
-        <p>Já se você não está gostando de todo esse trocadilho, calma que ainda tem "arroz soltinho, tudo muito gostoso filho!"</p>
-        <p>Se você acha que chegamos ao fundo do poço, saiba que para GTO que nunca trabalhou 600 conto é até poco.</p>
+        <h1>Conselhos de finanÃ§as para um momento de crise</h1>
+        <p>Se vocÃª nÃ£o guardou dinheiro para os momentos que virÃ£o, sinto informar, mas vocÃª se fodeu grandÃ£o.</p>
+        <p>Se vocÃª acha que estÃ¡ indo para o abate, pare, respire e repita: "Oi Gustavo. Legal o site!"</p>
+        <p>Se vocÃª acha que estamos vivendo tempos de peste, nunca se esqueÃ§a que Gustavo sambou na Fuvest!</p>
+        <p>JÃ¡ se vocÃª nÃ£o estÃ¡ gostando de todo esse trocadilho, calma que ainda tem "arroz soltinho, tudo muito gostoso filho!"</p>
+        <p>Se vocÃª acha que chegamos ao fundo do poÃ§o, saiba que para GTO que nunca trabalhou 600 conto Ã© atÃ© poco.</p>
     </body>
 </html>
